--- a/.config/config.json5
+++ b/.config/config.json5
@@ -1,10 +1,13 @@
 {
   "keybindings": {
     "All": {
-      "<q>": "Quit", // Quit the application
+      "<Ctrl-q>": "Quit", // Quit the application
       "<Ctrl-d>": "Quit", // Another way to quit
       "<Ctrl-c>": "Quit", // Yet another way to quit
       "<Ctrl-z>": "Suspend" // Suspend the application
     },
+    "Game": {
+      "<Ctrl-b>": "Back",
+    }
   }
 }
