--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,18 +25,21 @@ crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
 derive_builder = "0.20.1"
 derive_deref = "1.1.1"
 directories = "5.0.1"
+dyn-clone = "1.0.17"
 futures = "0.3.30"
 human-panic = "2.0.1"
-indoc = "2.0.5"
 itertools = "0.13.0"
 json5 = "0.4.1"
 lazy_static = "1.5.0"
 libc = "0.2.158"
+num-derive = "0.4.2"
 num-traits = "0.2.19"
+phf = { version = "0.11.2", features = ["macros"] }
 pretty_assertions = "1.4.0"
 ratatui = { version = "0.28.1", features = ["serde", "macros"] }
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
+shakmaty = "0.27.2"
 signal-hook = "0.3.17"
 strip-ansi-escapes = "0.2.0"
 strum = { version = "0.26.3", features = ["derive"] }
@@ -46,6 +49,7 @@ tracing = "0.1.40"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-textarea = "0.6.1"
+tui-widgets = { version = "0.3.0", default-features = false, features = ["popup"] }
 
 [build-dependencies]
 anyhow = "1.0.86"
