--- a/djinn/Cargo.toml
+++ b/djinn/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "minimax"
+name = "djinn"
 version = "0.1.0"
 edition = "2021"
 description = "A project demonstrating the minimax algorithm with several games"
@@ -21,6 +21,7 @@ clap = { version = "4.4.5", features = [
 ] }
 color-eyre = "0.6.3"
 config = "0.14.0"
+convert_case = { version = "0.6.0", default-features = false }
 crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
 derive_builder = "0.20.1"
 derive_deref = "1.1.1"
@@ -36,6 +37,7 @@ num-derive = "0.4.2"
 num-traits = "0.2.19"
 phf = { version = "0.11.2", features = ["macros"] }
 pretty_assertions = "1.4.0"
+pyo3 = { version = "0.22.5", features = ["auto-initialize"] }
 ratatui = { version = "0.28.1", features = ["serde", "macros"] }
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
@@ -43,6 +45,7 @@ shakmaty = "0.27.2"
 signal-hook = "0.3.17"
 strip-ansi-escapes = "0.2.0"
 strum = { version = "0.26.3", features = ["derive"] }
+thiserror = "1.0.64"
 tokio = { version = "1.39.3", features = ["full"] }
 tokio-util = "0.7.11"
 tracing = "0.1.40"
@@ -50,6 +53,10 @@ tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
 tui-textarea = "0.6.1"
 tui-widgets = { version = "0.3.0", default-features = false, features = ["popup"] }
+wasmtime = "25.0.1"
+wasmtime-wasi = "25.0.1"
+
+djinn-minimax = { path = "../djinn-minimax" }
 
 [build-dependencies]
 anyhow = "1.0.86"
